fixed .portal-wrap opacity transition + renamed gate to 'Open Portal'

--- a/public/glitch-img.css
+++ b/public/glitch-img.css
@@ -55,6 +55,15 @@
     background: url("./img/buds/1.gif") no-repeat 50% 50%/cover;
 }
 
+/* --< mobile >-- */
+@media screen and (max-width: 1100px) {
+    .nft .img.bud,
+    .nft.img.bud,
+    .glitch__img.bud .glitch__item {
+        background-position: -35px 0;
+    }
+}
+
 .nft .img,
 .nft.img,
 .glitch__img .glitch__item {
