--- a/public/portal.css
+++ b/public/portal.css
@@ -20,6 +20,8 @@
     gap: 15px;
 
     margin: auto -50px;
+
+    transition: opacity .2s;
 }
 
 .portal-container:hover > .portal-wrap:not(:hover) {
